Actualizacion  de header
acá comencé a actualizar el HTML a gusto mio en la parte de navbar, el CSS solo hice un espaciado para colocar cierto estilo,
Agregue una carpeta para guardar archivos tipo jpg, ico, svg, Etc.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 <body>
   
     <!-- HEADER --> 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <h1 class="mx-auto"><a class="navbar-brand" href="#">Briccio</a></h1>
-    </div>
-  </nav>
+      <div class="backnav">
+          <nav class="navbar backnav">
+            <div class="container">
+              <a class="navbar-brand mx-auto "href="#">
+                <img src="img/briccio.ico" alt="icono" width="200" height="100">
+              </a>
+            </div>
+        </nav>  
+      </div>
+       
   
     <!-- PRESENTACIONES -->
   <div class="jumbotron jumbotron-fluid bg-light presentacion-empresa">
@@ -28,7 +33,7 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h2 class="text-center">Equipo de trabajo</h2>
-      <p class="lead text-center">Brissio Pablo - Centurion Facundo - Golzalez Alexander</p>
+      <p class="lead text-center">Brissio Pablo - Centurion Facundo - Gonzalez Alexander</p>
     </div>
   </div>
 
@@ -37,7 +42,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card">
-        <img class="card-img-top" src="zapa.jpg" alt="Imagen 1">
+        <img class="card-img-top" src="/img/zapa.jpg" alt="Imagen 1">
         <div class="card-body">
           <p class="card-text">Producto Nro 1</p>
         </div>
@@ -45,7 +50,7 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img class="card-img-top" src="zapa.jpg" alt="Imagen 2">
+        <img class="card-img-top" src="/img/zapa.jpg" alt="Imagen 2">
         <div class="card-body">
           <p class="card-text">Producto Nro 2</p>
         </div>
@@ -53,7 +58,7 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img class="card-img-top" src="zapa.jpg" alt="Imagen 3">
+        <img class="card-img-top" src="/img/zapa.jpg" alt="Imagen 3">
         <div class="card-body">
           <p class="card-text">Producto Nro 3</p>
         </div>
@@ -61,7 +66,7 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img class="card-img-top" src="zapa.jpg" alt="Imagen 4">
+        <img class="card-img-top" src="/img/zapa.jpg" alt="Imagen 4">
         <div class="card-body">
           <p class="card-text">Producto Nro 4</p>
         </div>
@@ -69,7 +74,7 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img class="card-img-top" src="zapa.jpg" alt="Imagen 5">
+        <img class="card-img-top" src="/img/zapa.jpg" alt="Imagen 5">
         <div class="card-body">
           <p class="card-text">Producto Nro 5</p>
         </div>
@@ -77,7 +82,7 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img class="card-img-top" src="zapa.jpg" alt="Imagen 6">
+        <img class="card-img-top" src="/img/zapa.jpg" alt="Imagen 6">
         <div class="card-body">
           <p class="card-text">Producto Nro 6</p>
         </div>
