--- a/index.html
+++ b/index.html
@@ -159,21 +159,22 @@
           <form id="contact-form">
             <div class="mb-3">
               <label for="nombre-input" class="form-label">Nombre y Apellido</label>
-              <input type="text" class="form-control" id="nombre-input" required>
+              <input type="text" class="form-control" id="nombre-input">
             </div>
             <div class="mb-3">
               <label for="correo-input" class="form-label">Correo electrónico</label>
-              <input type="email" class="form-control" id="correo-input" required>
+              <input type="email" class="form-control" id="correo-input">
             </div>
             <div class="mb-3">
               <label for="telefono-input" class="form-label">Teléfono</label>
-              <input type="tel" class="form-control" id="telefono-input" required>
+              <input type="tel" class="form-control" id="telefono-input">
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
         </div>
       </div>
     </div>
+
     <div class="col-md-6">
       <div class="card shadow-lg p-3 mb-5 bg-body-tertiary rounded">
         <div class="card-body">
@@ -181,11 +182,11 @@
           <form id="cotizacion-form">
             <div class="mb-3">
               <label for="producto-input" class="form-label">Producto a Cotizar</label>
-              <input type="text" class="form-control" id="producto-input" required>
+              <input type="text" class="form-control" id="producto-input">
             </div>
             <div class="mb-3">
               <label for="cotizacion-correo-input" class="form-label">Correo electrónico</label>
-              <input type="email" class="form-control" id="cotizacion-correo-input" required>
+              <input type="email" class="form-control" id="cotizacion-correo-input">
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
@@ -212,10 +213,10 @@
     
     
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+<script src="second.js"></script>
 </body>
 </html>
 
