--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <footer class="container-fluid bg-light py-3">
       <div class="row justify-content-center">
         <div class="col-md-6 col-lg-4">
-          <h4 class="text-center mb-4">Conoce más sobre nosotros</h4>
+          <h4 class="text-center mb-4" id="footerText">Conoce más sobre nosotros</h4>
           <hr>
           <div class="row justify-content-center">
             <a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="bi bi-instagram logos_redes"></i><p class="redes_sociales">Instagram</p></a>
