--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Racing+Sans+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="estilos.css">
+  <link rel="icon" href="img/briccio.ico">
 </head>
 <body>
   
@@ -75,38 +79,20 @@
   <div class="jumbotron jumbotron-fluid backequipo shadow-lg  mb-3  rounded">
     <h1 class="text-center text-white p-5" >Equipo de trabajo</h1>
     <div class="container ">
-      
-      <div class="card mx-auto mb-3 bg-dark ">
-        <div class="row g-0">
-          <div class="col-md-4"> 
-            <div class="card backpresent"> 
-            <img class="mx-auto img-fluid" src="img/Mi proyecto.png" > 
-            <p class="lead text-center text-warning">Centurion Facundo</p>
-          </div>
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title text-light">Card title</h5>
-              <p class="card-text text-light">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-light-emphasis">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
 
       <div class="card mx-auto mb-3 bg-dark text-light">
         <div class="row g-0 ">
           <div class="col-md-4 "> 
             <div class="card  backpresent">
-              <img class="mx-auto img-fluid" src="img/Mi proyecto.png"> 
-              <p class="lead text-center text-warning ">Brissio Pablo</p>
+              <img class="mx-auto img-fluid" src="img/Keanu.jpg"> 
+              <p class="lead text-center text-warning ">Gonzalez Alexander</p>
             </div>
           </div>
           <div class="col-md-8">
             <div class="card-body text-light">
-              <h5 class="card-title ">Card title</h5>
-              <p class="card-text ">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text "><small class="text-light-emphasis">Last updated 3 mins ago</small></p>
+              <h5 class="card-title titulosPesronales">Gerente General</h5>
+              <p class="card-text text-light textosPersonales">El creador de la empresa de indumentaria y accesorios deportivos es un apasionado del baloncesto. Su visión se centra en proporcionar productos de calidad a precios asequibles para los aficionados al deporte. Su experiencia como jugador le inspiró para crear una marca que reflejara su amor por el juego..</p>
+              <p class="card-text "><small class="text-light-emphasis textosPersonales">Ex Jugador Profesional - Entrenador Tactico Chicago Bulls</small></p>
             </div>
           </div>
         </div>
@@ -118,15 +104,15 @@
       <div class="row g-0 ">
         <div class="col-md-4 "> 
           <div class="card backpresent"> 
-            <img class="mx-auto img-fluid" src="img/Mi proyecto.png" > 
-            <p class="lead text-center text-warning">Gonzalez Alexander</p>
+            <img class="mx-auto img-fluid" src="img/laurence.jpg" > 
+            <p class="lead text-center text-warning">Brissio Pablo</p>
           </div>
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title text-light">Card title</h5>
-            <p class="card-text text-light">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-light-emphasis">Last updated 3 mins ago</small></p>
+            <h5 class="card-title text-light titulosPesronales">Co-Gerente General</h5>
+            <p class="card-text text-light textosPersonales">El co-creador de la empresa de indumentaria y accesorios deportivos fue el entrenador del creador. Su relación de confianza y respeto mutuo durante los años de entrenamiento llevó a que juntos crearan una marca que reflejara su pasión por el baloncesto. Su visión compartida de calidad y accesibilidad impulsó el éxito de la empresa..</p>
+            <p class="card-text"><small class="text-light-emphasis textosPersonales">Entrenador Actualmente - Memphis Grizzlies</small></p>
           </div>
         </div>
       </div>
@@ -141,7 +127,7 @@
 
   <!-- Formularios -->
   <div  id="consultas" class="row pb-3">
-    <div class="col-md-6">
+    <div class="col-md-6" style="padding-left: 50px; padding-right: 30px;">
       <div class="card shadow-lg p-3 mb-5 bg-body-tertiary rounded">
         <div class="card-body ">
           <h3 class="card-title ">Contacto</h3>
@@ -164,7 +150,7 @@
       </div>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-6" style="padding-left: 50px; padding-right: 30px;">
       <div class="card shadow-lg p-3 mb-5 bg-body-tertiary rounded">
         <div class="card-body">
           <h3 class="card-title">Cotización de un Producto</h3>
