--- a/index.html
+++ b/index.html
@@ -69,10 +69,7 @@
       </div>
 
   </section>
-  
-  <section>
-    <div style=" background-color: rgb(145, 46, 16);width: 100%;height: 300px;"></div>
-  </section>
+
   
   <!-- EQUIPO DE TRABAJO -->
  <section id="equipo">
@@ -92,7 +89,7 @@
             <div class="card-body text-light">
               <h5 class="card-title titulosPesronales">Gerente General</h5>
               <p class="card-text text-light textosPersonales">El creador de la empresa de indumentaria y accesorios deportivos es un apasionado del baloncesto. Su visión se centra en proporcionar productos de calidad a precios asequibles para los aficionados al deporte. Su experiencia como jugador le inspiró para crear una marca que reflejara su amor por el juego..</p>
-              <p class="card-text "><small class="text-light-emphasis textosPersonales">Ex Jugador Profesional - Entrenador Tactico Chicago Bulls</small></p>
+              <p class="card-text "><small class="text-light-emphasis ">Ex Jugador Profesional - Entrenador Tactico Chicago Bulls</small></p>
             </div>
           </div>
         </div>
@@ -112,7 +109,7 @@
           <div class="card-body">
             <h5 class="card-title text-light titulosPesronales">Co-Gerente General</h5>
             <p class="card-text text-light textosPersonales">El co-creador de la empresa de indumentaria y accesorios deportivos fue el entrenador del creador. Su relación de confianza y respeto mutuo durante los años de entrenamiento llevó a que juntos crearan una marca que reflejara su pasión por el baloncesto. Su visión compartida de calidad y accesibilidad impulsó el éxito de la empresa..</p>
-            <p class="card-text"><small class="text-light-emphasis textosPersonales">Entrenador Actualmente - Memphis Grizzlies</small></p>
+            <p class="card-text"><small class="text-light-emphasis ">Entrenador Actualmente - Memphis Grizzlies</small></p>
           </div>
         </div>
       </div>
