--- a/index.html
+++ b/index.html
@@ -57,17 +57,11 @@
           <div class="col-md-4">
             <div class="pt-3 mt-5"> 
               <h1  >Presentación de empresa</h1>
-              <p class="lead">!Bienvenido/a! Estamos a su disposición para brindarles la mejor experiencia, les ofrecemos indumentaria, fitness, comodidad de todo tipo... !para cualquier genero!</p>
+              <p class="lead">¿Quieres llevar tu juego al siguiente nivel? ¡Tenemos las zapatillas de basquet más novedosas para ti! Desde amortiguación de alta tecnología hasta diseños aerodinámicos y transpirables, nuestras zapatillas te proporcionarán la comodidad y el soporte que necesitas en la cancha. Ya sea que seas un jugador experimentado o un principiante, nuestras zapatillas de alta calidad están diseñadas para mejorar tu rendimiento. ¡No pierdas la oportunidad de jugar con lo mejor! ¡Compra ahora y prepárate para dominar la cancha!</p>
               <p class="lead">Puede hacer su consultas <a style="color: #df4b22;"href="#consultas">aquí</a></p>
               </div>
           </div>
-          
       </div>
-        <div class=" text-warning pt-5  rounded" style="width: 500px; margin-left: 50%;">
-          
-        </div>
-      </div>
-
   </section>
 
   
@@ -106,7 +100,7 @@
           </div>
         </div>
         <div class="col-md-8">
-          <div class="card-body">
+          <div class="card-body text-light">
             <h5 class="card-title text-light titulosPesronales">Co-Gerente General</h5>
             <p class="card-text text-light textosPersonales">El co-creador de la empresa de indumentaria y accesorios deportivos fue el entrenador del creador. Su relación de confianza y respeto mutuo durante los años de entrenamiento llevó a que juntos crearan una marca que reflejara su pasión por el baloncesto. Su visión compartida de calidad y accesibilidad impulsó el éxito de la empresa..</p>
             <p class="card-text"><small class="text-light-emphasis ">Entrenador Actualmente - Memphis Grizzlies</small></p>
@@ -119,8 +113,55 @@
   
 <!-- PRESENTACION DE IMAGENES DE PRODUCTOS -->
 
-  
-</section>
+  <section id="productos">
+    <div class="card-group" style="padding:50px ;">
+      <div class="card">
+        <img src="img/luka2-obsidian.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">- Zapatillas -</h5>
+          <p class="card-text">Jordan Luka 2 - "Obsidian"</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/zion naruto.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">- Zapatillas -</h5>
+          <p class="card-text">Jordan Zion 1 - "Naruto"</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/Tatum1PinkLemonade.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">- Zapatillas -</h5>
+          <p class="card-text">Jordan Tatum 1 - "Pink Lemonade"</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-group" style="padding:50px ;">
+      <div class="card">
+        <img src="img/kobe 5 chaos.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">- Zapatillas -</h5>
+          <p class="card-text">Nike Kobe 5 - "Chaos"</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/kyrie 7 x concepts.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">- Zapatillas -</h5>
+          <p class="card-text">Nike Kyrie 7 - "Concepts"</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/kd15-BknNets.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">- Zapatillas -</h5>
+          <p class="card-text">Nike KD 15 - "Brooklyn Nets"</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Formularios -->
   <div  id="consultas" class="row pb-3">
